changed css and images

--- a/portfolio.html
+++ b/portfolio.html
@@ -30,23 +30,30 @@
 					</div>
 					
 					<div class="right">
-						<img src="assets/images/calculator.jpg" height="180px" width="270px">
+						<img src="assets/images/hangman.jpg" height="180px" width="270px">
 						<div class="rec">
 							<h2 class="pf"> Hangman </h2>
 						</div>
 					</div>
 
 					<div class="left">
-						<img src="assets/images/calculator.jpg" height="180px" width="270px">
+						<img src="assets/images/pong.png" height="180px" width="270px">
 						<div class="rec"> 
 							<h2 class="pf"> Pong </h2>
 						</div>
 					</div>
 
 					<div class="right">
-						<img src="assets/images/calculator.jpg" height="180px" width="270px">
+						<img src="assets/images/adventure.jpg" height="180px" width="270px">
 						<div class="rec">
-							<h2 class="pf"> Final Fantasy </h2>
+							<h2 class="pf"> Random RPG Game </h2>
+						</div>
+					</div>
+					
+					<div class="left">
+						<img src="assets/images/car.jpg" height="180px" width="270px">
+						<div class="rec"> 
+							<h2 class="pf"> Car Race </h2>
 						</div>
 					</div>
 
