--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			<div id="wrapper">
 				<div class="main">
 					<h1> About Me </h1>
-					<img class="left" src="https://pbs.twimg.com/profile_images/810425185182552065/YOeFoMLO.jpg" height="200px" width="200px">
+					<img class="prof" src="assets/images/saitama.jpg" height="200px" width="200px">
 					<p>
 						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce suscipit varius ex, dapibus molestie lectus elementum ut. Ut ultricies convallis orci, sed imperdiet leo vulputate nec. Quisque at mauris id purus commodo volutpat. Donec pulvinar quam mauris. In cursus mollis blandit. Nullam vulputate sem vitae pellentesque blandit. Mauris malesuada semper sapien, ut pretium lorem gravida ac. Morbi molestie dolor nec congue rutrum. Ut eros orci, tincidunt quis viverra eget, varius et tellus. Nullam mollis erat eu ipsum laoreet congue. Maecenas eu magna et erat finibus bibendum. 
 					</p>
@@ -34,9 +34,9 @@
 				</div>
 				<div class="sidebar">
 					<h1> Connect with Me </h1>
-					<img src="assets/images/github.png" height="60px" width="60px">
-					<img src="assets/images/linkedin.png" height="60px" width="60px">
-					<img src="assets/images/stackoverflow.png" height="60px" width="60px">
+					<a href="https://www.github.com/william--tan"> <img src="assets/images/github.png" height="60px" width="60px"> </a>
+					<a href="https://www.linkedin.com"> <img src="assets/images/linkedin.png"  height="60px" width="60px"> </a>
+					<a href="https://www.stackoverflow.com"> <img src="assets/images/stackoverflow.png"  height="60px" width="60px"> </a>
 				</div>
 			</div>
 		</div>
