--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 				</div>
 				<div class="sidebar">
 					<h1> Connect with Me </h1>
-					<a href="https://www.github.com/william--tan"> <img src="assets/images/github.png" height="60px" width="60px"> </a>
-					<a href="https://www.linkedin.com"> <img src="assets/images/linkedin.png"  height="60px" width="60px"> </a>
-					<a href="https://www.stackoverflow.com"> <img src="assets/images/stackoverflow.png"  height="60px" width="60px"> </a>
+					<a href="https://www.github.com/william--tan" style="text-decoration: none"> <img src="assets/images/github.png" height="60px" width="60px"> </a>
+					<a href="https://www.linkedin.com" style="text-decoration: none"> <img src="assets/images/linkedin.png"  height="60px" width="60px"> </a>
+					<a href="https://www.stackoverflow.com" style="text-decoration: none"> <img src="assets/images/stackoverflow.png"  height="60px" width="60px"> </a>
 				</div>
 			</div>
 		</div>
